[project]
name = "world-oil-price"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "streamlit>=1.28.0",
    "streamlit-vis-timeline>=0.1.0",
    "setuptools < 82",
]
